--- a/styles.css
+++ b/styles.css
@@ -151,9 +151,7 @@ button {
   width: 100%;
   height: 100%;
   padding: 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  text-align: center;
   padding: 20px 30px;
   color: white;
   border-radius: 15px;
@@ -186,7 +184,12 @@ button {
     padding: 0 20px;
     width: 100%;
   }
-  .card {
-    flex-direction: column;
-  }
+}
+@media screen and (min-width: 701px) {
+  #histories {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 30px;
+  }  
 }
