--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ body {
   justify-content: center;
   margin: 30px 0;
 }
-button {
+.button {
   padding: 10px 20px;
   border: none;
   font-size: 16px;
