--- a/styles.css
+++ b/styles.css
@@ -193,3 +193,16 @@ body {
     margin-bottom: 30px;
   }  
 }
+
+/* Blog page css */
+.blog {
+  margin: 20px 0 20px 0;
+  display: flex;
+  justify-content: center;
+}
+.blog a {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
